Added grid system.

--- a/css/application.css
+++ b/css/application.css
@@ -1,4 +1,9 @@
 @import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
+.grid:after {
+  content: "";
+  display: table;
+  clear: both; }
+
 .srt, .form__label--hidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -9,7 +14,7 @@
   position: absolute;
   width: 1px; }
 
-[class^="btn--"] {
+.panel--centered, .panel--padded--centered, [class^="btn--"] {
   text-align: center; }
 
 .icn--nav-toggle:before {
@@ -17,7 +22,7 @@
   content: '';
   position: absolute; }
 
-.centered {
+.centered, .grid {
   float: none;
   margin-left: auto;
   margin-right: auto; }
@@ -243,6 +248,11 @@ blockquote {
   padding: 0 0 0 5%;
   border-left: solid 0.33333em #ebecec; }
 
+img {
+  margin-bottom: 1.5em;
+  max-width: 100%;
+  height: auto; }
+
 ul,
 li {
   margin: 0;
@@ -270,10 +280,72 @@ footer {
     font-size: 1em;
     margin-top: 1.375em; }
 
-.container {
-  max-width: 61.875em;
-  margin: 0 auto;
-  padding: 0 0.9375em 0 0.9375em; }
+.panel, .panel--centered {
+  padding-top: 1.875em;
+  padding-bottom: 1.25em; }
+
+.panel--padded, .panel--padded--centered {
+  padding-top: 5em;
+  padding-bottom: 2.125em; }
+
+.grid {
+  width: 90%; }
+  [class*="grid__col--"] > .grid {
+    width: 100%; }
+  @media (min-width: 1100px) {
+    .grid {
+      max-width: 1050px; } }
+
+@media (min-width: 769px) {
+  .grid__col--1 {
+    width: 6.5%; }
+
+  .grid__col--2 {
+    width: 15%; }
+
+  .grid__col--3 {
+    width: 23.5%; }
+
+  .grid__col--4 {
+    width: 32%; }
+
+  .grid__col--5 {
+    width: 40.5%; }
+
+  .grid__col--6 {
+    width: 49%; }
+
+  .grid__col--7 {
+    width: 57.5%; }
+
+  .grid__col--8 {
+    width: 66%; }
+
+  .grid__col--9 {
+    width: 74.5%; }
+
+  .grid__col--10 {
+    width: 83%; }
+
+  .grid__col--11 {
+    width: 91.5%; }
+
+  .grid__col--12 {
+    width: 100%; } }
+@media (min-width: 1px) and (max-width: 768px) {
+  [class^="grid__col--"] {
+    margin-top: 0.75em;
+    margin-bottom: 0.75em; } }
+@media (min-width: 769px) {
+  [class^="grid__col--"] {
+    float: left;
+    min-height: 1px;
+    padding-left: 10px;
+    padding-right: 10px; }
+    [class^="grid__col--"] + [class^="grid__col--"] {
+      margin-left: 2%; }
+    [class^="grid__col--"]:last-of-type {
+      float: right; } }
 
 .nav__item, .nav__item--current {
   display: inline-block;
@@ -322,6 +394,15 @@ h2, .headline-secondary, .headline-secondary--grouped {
 .icn--nav-toggle {
   line-height: 0;
   cursor: pointer; }
+
+.img--wrap {
+  border: 1px solid #d6d7d9;
+  padding: 0.75em; }
+.img--avatar {
+  display: block;
+  border-radius: 50%; }
+.img--hero {
+  margin-bottom: 2.625em; }
 
 .headline-primary {
   margin-bottom: 1.66667em; }
