--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -82,3 +82,10 @@ $trns-duration  : .3s;
 // Path to Assets
 
 $path--rel      : "../img";
+
+// Grid
+
+$g-col-width: 65px;
+$g-gutter-width: 20px;
+$g-col-count: 12;
+$g-cont-max-w: 1050px;
