--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -10,7 +10,12 @@
   @extend %center-align;
   @extend %btn;
   margin-bottom: em(20px, 14px); 
-  width: auto;
-  display: inline-block;
-  margin-right: em(15px, 14px);
+  @include mq(small) {
+    width: 100%;
+  }
+  @include mq(medium) { 
+    width: auto;
+    display: inline-block;
+    @include doubly(20px);
+  }
 }
