--- a/scss/modules/_img.scss
+++ b/scss/modules/_img.scss
@@ -3,18 +3,20 @@
 // ==========================================================================
 
 .img {
-
   @include m(wrap) {
     border: 1px solid palette(grey, x-light);
     padding: em(12px);
   }
-
   @include m(avatar) {
     display: block;
     border-radius: $br--round;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: em(24px);
   }
-
   @include m(hero) {
-    margin-bottom: em(42px);
+    @media (min-width: 769px) {
+      margin-bottom: em(42px);
+    }
   }
 }
