--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -19,10 +19,10 @@
 @function palette($palette, $shade: 'base') {
 	@return map-get(map-get($color-palettes, $palette), $shade);
 }
-
-// Set the 'context' width for the grid
-
-@function g-context($g-col-width, $g-col-count, $g-gutter-width) {
+    
+// Set the "context" width for the grid
+    
+@function g-context($g-col-width, $g-col-count ,$g-gutter-width) {
   $g-context: ($g-col-width * $g-col-count) + ($g-gutter-width * ($g-col-count - 1));
   @return $g-context;
 }
