--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -18,9 +18,9 @@ $font-weight--ultra-bold : 900;
 
 // Descriptive Base Colors
 
-$white    : #fff;
-$black    : #0b0b0b;
-$grey     : #797e83;
+$white : #fff;
+$black : #0b0b0b;
+$grey  : #797e83;
 
 $fountain-blue  : #52bab3;
 $emerald        : #5ece7f;
@@ -85,7 +85,13 @@ $path--rel      : "../img";
 
 // Grid
 
-$g-col-width: 65px;
-$g-gutter-width: 20px;
-$g-col-count: 12;
-$g-cont-max-w: 1050px;
+$g-col-width    : 65px;
+$g-gutter-width : 20px;
+$g-col-count    : 12;
+$g-cont-max-w   : 1050px;
+
+// Breakpoints
+
+$brkpoint-sm    : 1px;
+$brkpoint-md    : 768px;
+$brkpoint-lg    : 1100px;
