--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -15,6 +15,29 @@
   }
 }
 
+// Media queries
+
+@mixin mq($break) {
+  @if $break == "small" {
+    @media (min-width: $brkpoint-sm) and (max-width: $brkpoint-md) {
+      @content;
+    }
+  }
+  @else if $break == "medium" {
+    @media (min-width: $brkpoint-md + 1) {
+      @content;
+    }
+  }
+  @else if $break == "large" {
+    @media (min-width: $brkpoint-lg) {
+      @content;
+    }
+  }
+   @else {
+   	@error "Whoops! No value could be retrieved for `#{$break}`. "
+  }
+}
+
 // Generate modifier color classes
 
 @mixin bg-colors($map) {
@@ -53,10 +76,26 @@
 	height: $h;
 	display: $disp;
 }
+      
+// Adjacent sibling margins
 
 @mixin doubly($margin: 1em) {
-  & + & {
-    margin-left: $margin;
+	& + & {
+	  margin-left: $margin;
     @content;
-  }
+	}
 }
+
+// Grid Columns
+     
+@mixin g-columns {
+  @for $i from 1 through $g-col-count {
+    $context: g-context($g-col-width, $g-col-count ,$g-gutter-width) !global;  
+    $target: ($g-col-width * $i) + ($g-gutter-width * ($i - 1));
+    
+    // Generate column modifier classes
+    &--#{$i} {
+      width: percentage($target / $context);
+    }
+  }
+}          
